--- a/Final_Project2/index.html
+++ b/Final_Project2/index.html
@@ -5,7 +5,7 @@
 <link href="webb.css" rel="stylesheet" type="text/css">
 <meta charset="UTF-8">
 <title>Home</title>
-<nav>
+<nav style="margin-bottom:0%;">
 
       <ul>
         <li><a href="Web1.html"><font face="myFirstFont" color="#462f25">Home</font></a></li>
@@ -16,7 +16,9 @@
       </ul>
     </nav>
     
-    <img class="thumbnail" src="bar1.jpg" float="left" align="middle" >
+    <figure class="main-item">
+    <img class="thumbnail" style="width:100%; padding:0%; margin-top:0%;" src="bar1.jpg" float="left" align="middle" >
+    </figure>
 </head>
 
 <body>
